--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ langgraph>=0.2.25
 langchain>=0.3.0
 openai>=1.13.0
 python-dotenv>=1.0.0
+langchain_openai
+cv2
 
 # Database & ORM
 sqlalchemy>=2.0.25
