--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,59 @@
-# Core framework
-streamlit>=1.32.0
+# ─────────────────────────────
+# 🌐 Frontend / App Framework
+# ─────────────────────────────
+streamlit>=1.33.0
 streamlit-webrtc>=0.47.1
 streamlit-extras>=0.3.0
-langgraph>=0.2.25
+
+# ─────────────────────────────
+# 🧠 AI / LangChain + LangGraph
+# ─────────────────────────────
+openai>=1.23.6
 langchain>=0.3.0
-openai>=1.13.0
-python-dotenv>=1.0.0
-langchain-openai
-cv2
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+langgraph>=0.2.30
+langchain-openai>=0.1.8
 
-# Database & ORM
-sqlalchemy>=2.0.25
-alembic>=1.13.0
+# ─────────────────────────────
+# 🗄️ Database / ORM
+# ─────────────────────────────
+sqlalchemy>=2.0.31
+alembic>=1.13.2
 
-# OCR & Image processing
-pytesseract>=0.3.10
-pillow>=10.0.0
-opencv-python>=4.9.0.80
+# ─────────────────────────────
+# 🖼️ OCR / Image Processing
+# ─────────────────────────────
+pytesseract>=0.3.13
+pillow>=10.2.0
+opencv-python>=4.10.0.84
 numpy>=1.26.4
 
-# Audio (speech to text / voice streaming)
-av>=11.0.0
+# ─────────────────────────────
+# 🔊 Audio / Voice Processing
+# ─────────────────────────────
+av>=12.0.0
 soundfile>=0.12.1
 pydub>=0.25.1
 
-# Utilities
-requests>=2.31.0
-python-multipart>=0.0.6
-tenacity>=8.2.3
+# ─────────────────────────────
+# 📊 Data / File Handling
+# ─────────────────────────────
+pandas>=2.2.2
+python-multipart>=0.0.9
+requests>=2.32.3
+tenacity>=8.3.0
 
-# CSV / TXT / File handling
-pandas>=2.2.0
+# ─────────────────────────────
+# 🔐 Utils / Misc
+# ─────────────────────────────
+python-dotenv>=1.0.1
+cryptography>=42.0.5
+tqdm>=4.66.4
 
-# Security & misc
-cryptography>=42.0.0
-tqdm>=4.66.1
+# ─────────────────────────────
+# 🧪 Optional (recommended for smoother Streamlit WebRTC)
+# ─────────────────────────────
+aiohttp>=3.9.5
+asyncio>=3.4.3
+typing-extensions>=4.11.0
