Improved files for Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,8 @@ alembic>=1.13.2
 # ─────────────────────────────
 pytesseract>=0.3.13
 pillow>=10.2.0
-opencv-python>=4.10.0.84
+# opencv-python>=4.10.0.84
+opencv-python-headless>=4.10.0.84
 numpy>=1.26.4
 
 # ─────────────────────────────
@@ -55,5 +56,5 @@ tqdm>=4.66.4
 # 🧪 Optional (recommended for smoother Streamlit WebRTC)
 # ─────────────────────────────
 aiohttp>=3.9.5
-asyncio>=3.4.3
+# asyncio>=3.4.3
 typing-extensions>=4.11.0
