--- a/data/config.json
+++ b/data/config.json
@@ -3,6 +3,6 @@
   "model": "gpt-4o-mini",
   "temperature": 0.4,
   "assistant_name": "Asistente",
-  "tone": "Amable y profesional; breve y guiado.",
+  "tone": "Amable y profesional; breve, guiado.",
   "currency": "USD"
 }
